# hexlet-flask-example

./: README.md  data.json  example.py  pyproject.toml  validator.py
templates/users/: bar.html  edit.html  form.html  index.html  new.html  show.html  start_page.html
